<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gfc"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="61dp"
        android:layout_height="63dp"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/sbold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/signup"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/white" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="140dp"
        android:paddingBottom="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <!-- Full Name -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:textColorHint="@android:color/secondary_text_light_nodisable"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/orange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fullname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:drawableStart="@drawable/ic_user"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/smedium"
                        android:hint="@string/fullname_hint"
                        android:inputType="textPersonName"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Email -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:textColorHint="@android:color/secondary_text_light_nodisable"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/orange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:drawableStart="@drawable/ic_email"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/smedium"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Phone -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:textColorHint="@android:color/secondary_text_light_nodisable"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/orange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:drawableStart="@drawable/ic_phone"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/smedium"
                        android:hint="@string/phone_hint"
                        android:inputType="phone"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Password -->
                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:textColorHint="@android:color/secondary_text_light_nodisable"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/orange"
                    app:boxCornerRadiusTopStart="16dp"
                    app:boxCornerRadiusTopEnd="16dp"
                    app:boxCornerRadiusBottomStart="16dp"
                    app:boxCornerRadiusBottomEnd="16dp"
                    app:boxStrokeColor="@color/orange"
                    app:boxStrokeWidth="1dp"
                    app:hintTextColor="@color/orange">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:drawableStart="@drawable/ic_pass"
                        android:drawablePadding="16dp"
                        android:fontFamily="@font/smedium"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Sign Up Button -->
                <Button
                    android:id="@+id/signupbtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/orange"
                    android:fontFamily="@font/smedium"
                    android:text="@string/signup"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:minHeight="48dp" />

                <!-- Already have account -->
                <TextView
                    android:id="@+id/gt_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/smedium"
                    android:text="@string/already_have_account"
                    android:textColor="@color/white" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/pgbar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/orange"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/linearLayout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</FrameLayout>
